Fixed projects section while on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
 }
 
 .icon {
-    padding: 20px 20px 20px 20px;
     height: 100px;
     width: 100px;
 }
@@ -29,6 +28,12 @@
     padding: 20px 20px 20px 20px;
     height: 50px;
     width: 50px;
+}
+
+.mobileIcon {
+    padding: 20px 5px 20px 5px;
+    height: 25px;
+    width: 25px;
 }
 
 .sectionHeader {
@@ -78,12 +83,10 @@
     overflow-x: hidden;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
-    /* height: 100vh; */
     width: 100%;
     max-width: 712px;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    /* overflow: hidden; */
 }
 
 ::-webkit-scrollbar {
